--- a/members-only-events.html
+++ b/members-only-events.html
@@ -110,11 +110,11 @@
                   ticket and appetizers, and lunch on Sunday.
                 </p>
                 <a
-                  href="https://manager.gallusgolf.com/Register/67448/member-member-masters-pro-am"
+                  href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67448"
                   class="rts-btn btn-primary btn-bold"
                   target="_blank"
                 >
-                  Sign Up Your Team Here
+                  Results
                 </a>
               </div>
             </div>
@@ -307,7 +307,7 @@
                 <div class="event-date">July 19th - 20th</div>
                 <h2 class="title">Stagg Hill Member Guest Tournament</h2>
                 <p class="disc">
-                  Format: 2 person sramble on the front nine, shamble on the
+                  Format: 2 person scramble on the front nine, shamble on the
                   back 9, Saturday and Sunday.
                 </p>
                 <p>
