--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -121,21 +121,21 @@
                   </div>
                 </div>
 
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>Stagg Hill Open Two Person Best Ball</h4>
                     <p>April 26th and 27th, 9am</p>
                     <a
-                      href="https://manager.gallusgolf.com/Register/67449/stagg-hill-open-2-person-best-ball"
+                      href="https://manager.gallusgolf.com/Tournament/Leaderboard/Index/67449?scoreFormat=Gross&leaderboardType=TeamScramble"
                       class="pillock"
                       target="_blank"
                     >
                       <img
                         class="pillock-icon register injectable"
-                        src="assets/images/svgs/register.svg"
+                        src="assets/images/svgs/results.svg"
                         alt=""
                       />
-                      Register
+                      Results
                     </a>
                   </div>
                   <div class="timeline-dot">
@@ -143,33 +143,45 @@
                   </div>
                 </div>
 
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>Budweiser Open Scramble</h4>
                     <p>
                       Saturday, June 7th, 9am SG & Sunday, June 8th, 7:30 TT
                     </p>
-                    <a
-                      href="https://manager.gallusgolf.com/Register/67526/budweiser-open"
+                   <a
+                      href="https://manager.gallusgolf.com/Tournament/Leaderboard/Index/67526?scoreFormat=Gross&leaderboardType=TeamScramble"
                       class="pillock"
                       target="_blank"
                     >
                       <img
                         class="pillock-icon register injectable"
-                        src="assets/images/svgs/register.svg"
+                        src="assets/images/svgs/results.svg"
                         alt=""
                       />
-                      Register
+                      Results
                     </a>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>Little Apple Slice 2 Lady Scramble</h4>
                     <p>June 28th, 8:30 SG</p>
+                    <a
+                      href="https://manager.gallusgolf.com/Tournament/Leaderboard/Index/68767?scoreFormat=Gross&leaderboardType=TeamScramble"
+                      class="pillock"
+                      target="_blank"
+                    >
+                      <img
+                        class="pillock-icon register injectable"
+                        src="assets/images/svgs/results.svg"
+                        alt=""
+                      />
+                      Results
+                    </a>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
