Fixed redirects. Commented out newsletter sign-up in footer.

--- a/index.html
+++ b/index.html
@@ -418,7 +418,11 @@
       <div class="container">
         <div class="row g-5">
           <div class="col-12 col-md-6">
-            <div class="events-list-container">
+            <div
+              class="events-list-container wow fadeInUp"
+              data-wow-offset="120"
+              data-wow-delay=".1s"
+            >
               <h6 class="events-list-heading">Upcoming Events</h6>
               <div id="events-list"></div>
               <a href="/calendar.html" class="all-events-link">
@@ -430,7 +434,7 @@
             <div
               class="the-table-itself wow fadeInUp"
               data-wow-offset="120"
-              data-wow-delay=".1s"
+              data-wow-delay=".12s"
             >
               <div class="hours-table-brow">
                 <div class="table-title-wrapper">
