--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -265,7 +265,7 @@
 
                 <div class="single-consulting-one">
                   <div class="right-area">
-                    <h4>Fall Fling 2 Person Scramble</h4>
+                    <h4>Fall Fling 2 Person Shamble</h4>
                     <p>Sunday, October 12th, 9am SG</p>
                     <a
                       href="https://manager.gallusgolf.com/Register/67533/fall-fling-2-shamble"
