--- a/couples-league.html
+++ b/couples-league.html
@@ -12,7 +12,7 @@
       type="image/x-icon"
       href="assets/images/fav.png"
     />
-    <title>Couple's League</title>
+    <title>Couples League</title>
     <link
       rel="stylesheet preload"
       href="assets/css/vendor/bootstrap.min.css"
@@ -69,7 +69,7 @@
                 data-wow-offset="120"
                 data-wow-delay=".7s"
               >
-                Couple's League
+                Couples League
               </h1>
             </div>
           </div>
@@ -87,7 +87,7 @@
         data-wow-delay=".9s"
       >
         <div class="row">
-          <h3>Couple's League on Friday Nights</h3>
+          <h3>Couples League on Friday Nights</h3>
           <div class="league-breakdown">
             <p>
               2025 Couples League is OPEN to any couples that would like to join
