Adjusting phablet styling.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <body style="position: relative">
     <!-- header four area start -->
-    <header class="header-style-one style-two header--sticky">
+    <header class="header-style-one style-two header--sticky home">
       <my-header> </my-header>
       <div class="gradient-bg"></div>
     </header>
@@ -154,7 +154,7 @@
           class="row g-5 justify-content-between flex-column-reverse flex-md-row"
         >
           <div
-            class="col-lg-6 pr--50 d-flex flex-column align-items-centered introduction-column wow fadeInUp"
+            class="col-lg-6 d-flex flex-column align-items-centered introduction-column wow fadeInUp"
             data-wow-offset="120"
             data-wow-delay=".2s"
           >
@@ -414,7 +414,7 @@
     <!-- Notices section end -->
 
     <!-- table of hours -->
-    <section class="hours-table mobile-padding">
+    <section class="hours-table">
       <div class="container">
         <div class="row g-5">
           <div class="col-12 col-md-6">
