Updating News items across site.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start border-left">
               <a
-                href="https://form.jotform.com/200425860403142"
+                href="/assets/pdfs/Stagg-Hill-Short-Game-Render.pdf"
                 target="_blank"
                 class="thumbnail"
               >
@@ -248,52 +248,54 @@
                   <img
                     loading="lazy"
                     rel="preload"
-                    src="images/jr-golf-camp.jpg"
+                    src="images/shortgame-lesson.jpg"
                     alt=""
                   />
                 </div>
 
                 <div class="inner-content-area d-flex">
                   <div class="top-area">
-                    <h3 class="title animated fadeIn">Junior Golf Camp</h3>
+                    <h3 class="title animated fadeIn">
+                      Help us build a Short Game Facility!
+                    </h3>
 
                     <p>
-                      These 3 day camps hosted by PGA Pro Chad Myers will focus
-                      on short game and full swing each day of camp. Rules and
-                      etiquette will also be covered to get your Jr. Golfer
-                      ready for the course.
+                      Stagg Hill has a vision of building the best short game
+                      practice facility in the area. We are looking for
+                      donations to help us accomplish this goal.
                     </p>
                     <hr />
-                    <h6>2025 Dates</h6>
-                    <p>June 2 - 4, June 23 - 25</p>
-                    <hr />
-                    <div class="row flex-row">
-                      <div>Cost per camp</div>
+                    <h6>Donation Tiers</h6>
+                    <div class="row flex-row donation-row">
+                      <div>Par</div>
                       <div class="spanner"></div>
-                      <div>$50/child</div>
+                      <div>$250</div>
                     </div>
-                    <div class="row flex-row">
-                      <div>K - 3rd grades</div>
+                    <div class="row flex-row donation-row">
+                      <div>Birdie</div>
                       <div class="spanner"></div>
-                      <div>8:30 - 9:30am</div>
+                      <div>$500</div>
                     </div>
-                    <div class="row flex-row">
-                      <div>4th - 6th grades</div>
+                    <div class="row flex-row donation-row">
+                      <div>Eagle</div>
                       <div class="spanner"></div>
-                      <div>10 - 11am</div>
+                      <div>$1,000</div>
                     </div>
-                    <div class="row flex-row">
-                      <div>7th - 11th grades</div>
+                    <div class="row flex-row donation-row">
+                      <div>Albatross</div>
                       <div class="spanner"></div>
-                      <div>11:30 - 12:30pm</div>
+                      <div>Over $1,000</div>
                     </div>
-                    <hr class="mt-5" />
-                    <p>
-                      Questions? Please, contact Chad Myers → (785) 539-1041.
+                    <p style="padding-top: 5px">
+                      Donations will be noted at the annual meeting as well as
+                      on a permanent plaque next to the short game area. If you
+                      are willing to help improve our facilities by donating
+                      please reach out to Chad Myers, PGA. 785-539-1041 or
+                      chad@stagghillgolfclub.com
                     </p>
                   </div>
                   <div class="row link-bar flex-row">
-                    <div>Register your child</div>
+                    <div>Click to view render</div>
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="32"
@@ -329,13 +331,28 @@
                   <div class="top-area">
                     <h3 class="title animated fadeIn">New Pro Shop Page!</h3>
 
-                    <p>Click here to check out the new pro shop page.</p>
+                    <p>Click <u>here</u> to check out the new pro shop page.</p>
                     <hr />
                     <div class="specials">
-                      <h6>This month's specials.</h6>
-                      <p class="p2">*In stock shoes are 15% off!*</p>
+                      <h6>This season's specials!</h6>
+                      <div class="special-wrapper">
+                        <div class="row">
+                          <div class="col">
+                            <div class="callaway-logo-wrapper">
+                              <img
+                                src="assets/images/svgs/callaway.svg"
+                                alt=""
+                              />
+                            </div>
+                            <h4>something</h4>
+                          </div>
+                          <div class="col">
+                            <img src="assets/images/service/callaway-opus.webp" alt="" class="callaway-opus">
+                          </div>
+                        </div>
+                      </div>
                     </div>
-                    <hr />
+                    
                   </div>
                   <div class="row link-bar flex-row">
                     <div>Visit page</div>
