--- a/instruction.html
+++ b/instruction.html
@@ -90,7 +90,7 @@
           <div class="col-12 col-md-5">
             <img
               class="pga-member-logo"
-              src="assets/images/logo/pga-member-logo.svg"
+              src="assets/images/logo/pga-member-logo.png"
               alt=""
             />
             <h3>Lessons with Chad Myers, PGA</h3>
@@ -208,6 +208,7 @@
       </div>
     </section>
 
+    <!-- NEWS BOARD -> EACH NEWS ITEM CONTAINED BY ".col-*" -->
     <section
       class="rts-blog-area rts-section-gap position-relative homepage-notices instruction-notices"
     >
