Neeeeeeeed to see updates and I don't want to start a local server - pushing to Vercel.

--- a/contact.html
+++ b/contact.html
@@ -415,6 +415,7 @@
               <a
                 href="book-tee-time.html"
                 class="rts-btn btn-primary my-btn sidebar-btn"
+                target="_blank"
               >
                 Book tee time
                 <svg
