--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 src="assets/images/svgs/stag-antlers.svg"
                 alt=""
               />
-              <h2>The Club at <span class="italicized">Mack</span></h2>
+              <h2>Stagg Hill Golf Club</h2>
             </div>
           </div>
         </div>
@@ -261,10 +261,10 @@
 
                     <p>
                       Stagg Hill has a vision of building the best short game
-                      practice facility in the area. We are looking for
-                      donations to help us accomplish this goal.
+                      practice facility in the area and we are looking for
+                      donations to help us accomplish this goal!
                     </p>
-                    <hr />
+                    <!-- <hr /> -->
                     <h6>Donation Tiers</h6>
                     <div class="row flex-row donation-row">
                       <div>Par</div>
@@ -286,7 +286,7 @@
                       <div class="spanner"></div>
                       <div>Over $1,000</div>
                     </div>
-                    <p style="padding-top: 5px">
+                    <p style="padding-top: 10px">
                       Donations will be noted at the annual meeting as well as
                       on a permanent plaque next to the short game area. If you
                       are willing to help improve our facilities by donating
@@ -322,7 +322,7 @@
                   <img
                     loading="lazy"
                     rel="preload"
-                    src="images/pro-shop.jpg"
+                    src="assets/images/news/pro-shop-callaway.webp"
                     alt=""
                   />
                 </div>
@@ -332,27 +332,7 @@
                     <h3 class="title animated fadeIn">New Pro Shop Page!</h3>
 
                     <p>Click <u>here</u> to check out the new pro shop page.</p>
-                    <hr />
-                    <div class="specials">
-                      <h6>This season's specials!</h6>
-                      <div class="special-wrapper">
-                        <div class="row">
-                          <div class="col">
-                            <div class="callaway-logo-wrapper">
-                              <img
-                                src="assets/images/svgs/callaway.svg"
-                                alt=""
-                              />
-                            </div>
-                            <h4>something</h4>
-                          </div>
-                          <div class="col">
-                            <img src="assets/images/service/callaway-opus.webp" alt="" class="callaway-opus">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    
+                    <!-- <hr /> -->
                   </div>
                   <div class="row link-bar flex-row">
                     <div>Visit page</div>
@@ -379,7 +359,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start">
               <a
-                href="https://www.golfnations.com/central-links-golf/start/join/?cid=6861"
+                href="https://www.usga.org/content/usga/home-page/handicapping/world-handicap-system/2024-revision.html"
                 target="_blank"
                 class="thumbnail h-100"
               >
@@ -406,6 +386,107 @@
                   </div>
                   <div class="row link-bar flex-row">
                     <div>Click to renew with us</div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                    >
+                      <path
+                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                        stroke="#999999"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <div class="single-blog-area-start">
+              <a
+                href="http://manhattanjrgolf.com/index.html"
+                target="_blank"
+                class="thumbnail h-100"
+              >
+                <div class="image-area">
+                  <img
+                    loading="lazy"
+                    rel="preload"
+                    src="images/mjga.png"
+                    alt=""
+                  />
+                </div>
+
+                <div class="inner-content-area d-flex">
+                  <div class="top-area">
+                    <h3 class="title animated fadeIn">
+                      Manhattan Junior Golf Association
+                    </h3>
+
+                    <p>
+                      If you are looking to get your Jr. Golfer involved in
+                      tournaments this is a great way to do it. The MJGA hosts
+                      tournaments on Thursdays in and around Manhattan
+                      throughout the summer. These events are considered
+                      developmental tournaments and allow parents to be involved
+                      by caddying for their child. These events are very low key
+                      and are just 9 holes each week.
+                    </p>
+                  </div>
+                  <div class="row link-bar flex-row">
+                    <div>Click here for more info!</div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                    >
+                      <path
+                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                        stroke="#999999"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-sm-12">
+            <div class="single-blog-area-start">
+              <a
+                href="https://www.drivechipandputt.com/?utm_source=mailchimp&utm_medium=email&utm_campaign=2021_past_participants_registration_open"
+                target="_blank"
+                class="thumbnail"
+              >
+                <div class="image-area">
+                  <img
+                    loading="lazy"
+                    rel="preload"
+                    src="images/drive-chip-putt.png"
+                    alt=""
+                  />
+                </div>
+
+                <div class="inner-content-area d-flex">
+                  <div class="top-area">
+                    <h3 class="title animated fadeIn">Drive, Chip, & Putt</h3>
+                    <h6>Registration Now Open!</h6>
+                    <p>
+                      The 2025-26 season of qualifying for Drive, Chip and Putt
+                      tees off for boys and girls ages 7-15. Local qualifying
+                      begins May 2, 2025 at 357 sites nationwide.
+                    </p>
+                  </div>
+                  <div class="row link-bar flex-row">
+                    <div>Sign up and join the fun today!</div>
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="32"
