--- a/pro-shop.html
+++ b/pro-shop.html
@@ -116,18 +116,26 @@
       <div class="container">
         <!-- <hr /> -->
         <div
-          class="row g-5 justify-content-between pt-4 lined-row flex-column flex-md-row"
+          class="row g-5 justify-content-between lined-row flex-column flex-md-row"
         >
           <div class="col-12 col-md-5">
-            <p class="shop-note">
+            <p
+              class="shop-note wow fadeInUp"
+              data-wow-offset="120"
+              data-wow-delay=".1s"
+            >
               The brands above are available in the golf shop. We can also order
               products from Taylor Made and Cleveland Golf.
             </p>
           </div>
           <div class="col-12 col-md-6">
             <div class="row justify-content-between g-5">
-              <div class="col-6 col-sm-5">
-                <div class="note-box">
+              <div class="col-6">
+                <div
+                  class="note-box note-box-service wow fadeInUp"
+                  data-wow-offset="120"
+                  data-wow-delay=".2s"
+                >
                   <div class="note-brow">
                     <img
                       class="note-icon"
@@ -142,8 +150,12 @@
                   to get fitted today.
                 </div>
               </div>
-              <div class="col-6 col-sm-5">
-                <div class="note-box">
+              <div class="col-6">
+                <div
+                  class="note-box note-box-service wow fadeInUp"
+                  data-wow-offset="120"
+                  data-wow-delay=".3s"
+                >
                   <div class="note-brow">
                     <img
                       class="note-icon trade"
@@ -155,8 +167,12 @@
                   clubs.
                 </div>
               </div>
-              <div class="col-6 col-sm-5">
-                <div class="note-box">
+              <div class="col-6">
+                <div
+                  class="note-box note-box-service wow fadeInUp"
+                  data-wow-offset="120"
+                  data-wow-delay=".1s"
+                >
                   <div class="note-brow">
                     <img
                       class="note-icon wedge"
@@ -173,8 +189,12 @@
                   Fitting Tool.
                 </div>
               </div>
-              <div class="col-6 col-sm-5">
-                <div class="note-box">
+              <div class="col-6">
+                <div
+                  class="note-box note-box-service wow fadeInUp"
+                  data-wow-offset="120"
+                  data-wow-delay=".2s"
+                >
                   <div class="note-brow">
                     <img
                       class="note-icon putting-green"
@@ -257,7 +277,7 @@
       </div>
     </section>
 
-    <section
+    <!-- <section
       class="rts-blog-area rts-section-gap position-relative homepage-notices pro-shop-notices mt-5"
     >
       <div class="container">
@@ -314,7 +334,7 @@
 
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start">
-              <a href="blog-details.html" class="thumbnail h-100">
+              <a href="https://www.usga.org/content/usga/home-page/handicapping/world-handicap-system/2024-revision.html" class="thumbnail h-100">
                 <div class="image-area">
                   <img
                     loading="lazy"
@@ -359,7 +379,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- cta area start -->
     <section class="cta blonde">
