--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -149,7 +149,7 @@
                     <p>
                       Saturday, June 7th, 9am SG & Sunday, June 8th, 7:30 TT
                     </p>
-                   <a
+                    <a
                       href="https://manager.gallusgolf.com/Tournament/Leaderboard/Index/67526?scoreFormat=Gross&leaderboardType=TeamScramble"
                       class="pillock"
                       target="_blank"
@@ -321,7 +321,16 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="title-center-2">
-              <h3 class="title">Thank You to Our 2025 Tournament Sponsors!</h3>
+              <h3 class="title">Thank You to Our 2025 Tournament <br class="title-br"/>Sponsors!</h3>
+              <div class="schedule-note schedule-note-sponsors-on-ot-page mt-5 text-center">
+                If you are interested in becoming a tournament sponsor
+                <a
+                  href="https://www.stagghillgolfclub.com/docs/2025%20SPONSORSHIP%20OPPORTUNITIES.pdf"
+                  target="_blank"
+                >
+                  click here</a
+                >.
+              </div>
             </div>
           </div>
         </div>
@@ -469,15 +478,6 @@
               </a>
             </div>
           </div>
-        </div>
-        <div class="schedule-note mt-5 pt-5">
-          If you are interested in becoming a tournament sponsor
-          <a
-            href="https://www.stagghillgolfclub.com/docs/2025%20SPONSORSHIP%20OPPORTUNITIES.pdf"
-            target="_blank"
-          >
-            click here</a
-          >.
         </div>
       </div>
     </section>
