Added highlighted background to event-list-item that falls under today's date.

--- a/womens-league.html
+++ b/womens-league.html
@@ -105,7 +105,7 @@
             </p>
             <p>
               For further information check our website:
-              <a class="pillock" href="" target="_blank">SHLGA Website</a>or
+              <a class="pillock" href="https://shlga.weebly.com/" target="_blank">SHLGA Website</a>or
               contact Kim Crusinberry:
               <a
                 class="pillock"
