--- a/pro-shop.html
+++ b/pro-shop.html
@@ -129,7 +129,7 @@
             </p>
           </div>
           <div class="col-12 col-md-6">
-            <div class="row justify-content-between g-5">
+            <div class="row justify-content-between g-4 g-md-5">
               <div class="col-6">
                 <div
                   class="note-box note-box-service wow fadeInUp"
@@ -230,7 +230,7 @@
             <p class="shop-note">Select Footjoy in stock now!</p>
           </div>
           <div class="col-12 col-md-9">
-            <div class="row g-5 primary-row">
+            <div class="row g-3 g-md-5 primary-row">
               <div class="col-6 col-sm-4">
                 <div class="note-box">
                   <div class="img-box">
