Fixing booking engine spacing.

--- a/book-tee-time.html
+++ b/book-tee-time.html
@@ -88,14 +88,12 @@
     </div>
     <!-- rts banner four end -->
 
-    <section class="container booking-container mobile-padding">
-      <div class="row wow fadeInUp" data-wow-offset="120" data-wow-delay=".3s">
-        <iframe
-          src="https://teetimes.teequest.com/42"
-          style="width: 100%; min-height: 1000px; margin-top: 0px; border: none"
-          frameborder="0"
-        ></iframe>
-      </div>
+    <section class="booking-container">
+      <iframe
+        src="https://teetimes.teequest.com/42"
+        style="width: 100%; min-height: 1000px; margin-top: 0px; border: none"
+        frameborder="0"
+      ></iframe>
     </section>
     <footer>
       <my-footer></my-footer>
