--- a/contact.html
+++ b/contact.html
@@ -289,11 +289,6 @@
           data-wow-offset="120"
           data-wow-delay=".4s"
         >
-          <!-- <img
-            src="assets/images/svgs/handshake.svg"
-            alt=""
-            class="handshake-sticker"
-          /> -->
           <h3>Donation Requests</h3>
           <p>
             Use this form to request donations. Please submit your request at
@@ -309,6 +304,7 @@
           <a
             href="assets/pdfs/Donation-Request-Form.pdf"
             class="rts-btn btn-primary btn-bold"
+            target="_blank"
             >Donation Request Form</a
           >
         </div>
