Updating pro shop pics.

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                   <img
                     loading="lazy"
                     rel="preload"
-                    src="assets/images/news/pro-shop-callaway.webp"
+                    src="assets/images/news/stagg-pro-shop-small.jpg"
                     alt=""
                   />
                 </div>
