Updated Pro Shop page and added Scorecard page.

--- a/calendar.html
+++ b/calendar.html
@@ -231,6 +231,7 @@
               <a href="#" class="main" aria-expanded="false">About</a>
               <ul class="submenu mm-collapse">
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="scorecard.html">Scorecard</a></li>
                 <li><a href="meet-the-staff.html">Meet The Staff</a></li>
                 <li>
                   <a href="meet-the-staff.html#join-our-team">Join Our Team</a>
