--- a/index.html
+++ b/index.html
@@ -265,7 +265,13 @@
                       donations to help us accomplish this goal!
                     </p>
                     <!-- <hr /> -->
-                    <h6>Donation Tiers</h6>
+                    <h6>
+                      <img
+                        src="assets/images/icons/layer.svg"
+                        class="stack injectable"
+                        alt=""
+                      />Donation Tiers
+                    </h6>
                     <div class="row flex-row donation-row">
                       <div>Par</div>
                       <div class="spanner"></div>
@@ -332,7 +338,18 @@
                     <h3 class="title animated fadeIn">New Pro Shop Page!</h3>
 
                     <p>Click <u>here</u> to check out the new pro shop page.</p>
-                    <!-- <hr /> -->
+                    <div class="specials">
+                      <h5>
+                        <img
+                          src="assets/images/icons/fire.svg"
+                          class="injectable fire-icon"
+                          alt=""
+                        />
+                        August Pro Shop Specials
+                      </h5>
+                      <p class="deal">1/2 Price Shorts and Skorts</p>
+                      <p class="deal">25% OFF In-Stock Golf Shoes</p>
+                    </div>
                   </div>
                   <div class="row link-bar flex-row">
                     <div>Visit page</div>
@@ -819,6 +836,7 @@
               <a href="#" class="main" aria-expanded="false">About</a>
               <ul class="submenu mm-collapse">
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="scorecard.html">Scorecard</a></li>
                 <li><a href="meet-the-staff.html">Meet The Staff</a></li>
                 <li>
                   <a href="meet-the-staff.html#join-our-team">Join Our Team</a>
