--- a/mens-league.html
+++ b/mens-league.html
@@ -449,6 +449,7 @@
               <a href="#" class="main" aria-expanded="false">About</a>
               <ul class="submenu mm-collapse">
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="scorecard.html">Scorecard</a></li>
                 <li><a href="meet-the-staff.html">Meet The Staff</a></li>
                 <li>
                   <a href="meet-the-staff.html#join-our-team">Join Our Team</a>
@@ -496,7 +497,6 @@
 
     <script defer src="assets/js/plugins/svg-inject.js"></script>
     <script defer src="assets/js/plugins/metismenu.js"></script>
-    <script defer src="assets/js/vendor/contact-form.js"></script>
     <script defer src="assets/js/vendor/bootstrap.min.js"></script>
     <script defer src="assets/js/main.js"></script>
     <script src="./assets/js/weather.js "></script>
