--- a/pro-shop.html
+++ b/pro-shop.html
@@ -116,17 +116,38 @@
       <div class="container">
         <!-- <hr /> -->
         <div
-          class="row g-5 justify-content-between lined-row flex-column flex-md-row"
+          class="row g-4 g-md-5 justify-content-between lined-row flex-column flex-md-row"
         >
-          <div class="col-12 col-md-5">
-            <p
-              class="shop-note wow fadeInUp"
-              data-wow-offset="120"
-              data-wow-delay=".1s"
-            >
-              The brands above are available in the golf shop. We can also order
-              products from Taylor Made and Cleveland Golf.
-            </p>
+          <div
+            class="col-12 col-md-6 d-flex height-100 wow fadeInUp"
+            data-wow-offset="120"
+            data-wow-delay=".1s"
+            
+          >
+            <div class="row flex-column g-4 g-md-5" >
+              <div class="col-12" style="flex-grow: 1;">
+                <div class="initial-note">
+                  <p class="shop-note">
+                    All the brands above are available in the golf shop and we
+                    can also order products from Taylor Made and Cleveland Golf.
+                  </p>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="specials rounded-corners">
+                  <h5>
+                    <img
+                      src="assets/images/icons/fire.svg"
+                      class="injectable fire-icon"
+                      alt=""
+                    />
+                    August Pro Shop Specials
+                  </h5>
+                  <p class="deal">1/2 Price Shorts and Skorts</p>
+                  <p class="deal">25% OFF In-Stock Golf Shoes</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-12 col-md-6">
             <div class="row justify-content-between g-4 g-md-5">
@@ -469,6 +490,7 @@
               <a href="#" class="main" aria-expanded="false">About</a>
               <ul class="submenu mm-collapse">
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="scorecard.html">Scorecard</a></li>
                 <li><a href="meet-the-staff.html">Meet The Staff</a></li>
                 <li>
                   <a href="meet-the-staff.html#join-our-team">Join Our Team</a>
