--- a/membership-fees.html
+++ b/membership-fees.html
@@ -498,6 +498,7 @@
               <a href="#" class="main" aria-expanded="false">About</a>
               <ul class="submenu mm-collapse">
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="scorecard.html">Scorecard</a></li>
                 <li><a href="meet-the-staff.html">Meet The Staff</a></li>
                 <li>
                   <a href="meet-the-staff.html#join-our-team">Join Our Team</a>
@@ -545,29 +546,7 @@
 
     <script defer src="assets/js/plugins/svg-inject.js"></script>
     <script defer src="assets/js/plugins/metismenu.js"></script>
-    <script defer src="assets/js/vendor/contact-form.js"></script>
     <script defer src="assets/js/vendor/bootstrap.min.js"></script>
-
-    <!-- scripts for tooltips start -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      const tooltipTriggerList = document.querySelectorAll(
-        '[data-bs-toggle="tooltip"]'
-      );
-      const tooltipList = [...tooltipTriggerList].map(
-        (tooltipTriggerEl) => new bootstrap.Tooltip(tooltipTriggerEl)
-      );
-    </script>
-    <!-- scripts for tooltips end -->
 
     <script defer src="assets/js/main.js"></script>
     <script src="./assets/js/weather.js "></script>
