Added link to portal back to footer.

--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
             <div
               class="single-solution-style-one border-left border-bottom-1 h-100"
             >
-              <a href="http://www.mcgrawsmanhattan.com/" target="_blank">
+              <a href="https://www.facebook.com/mcgrawsmanhattan/" target="_blank">
                 <img
                   src="./assets/images/logo/businesses/mcgraws.svg"
                   class="logo mcgraws"
