--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -211,6 +211,27 @@
                 </div>
                 <div class="single-consulting-one">
                   <div class="right-area">
+                    <h4>Night Golf</h4>
+                    <p>Friday, August 22nd</p>
+                    <a
+                      href="https://manager.gallusgolf.com/Register/53233/night-golf"
+                      class="pillock"
+                      target="_blank"
+                    >
+                      <img
+                        class="pillock-icon register injectable"
+                        src="assets/images/svgs/register.svg"
+                        alt=""
+                      />
+                      Sign Up
+                    </a>
+                  </div>
+                  <div class="timeline-dot">
+                    <div class="time-line-circle"></div>
+                  </div>
+                </div>
+                <div class="single-consulting-one">
+                  <div class="right-area">
                     <h4>Night Golf 4 Person Scramble</h4>
                     <p>Sunday, August 31st, 9am SG</p>
                   </div>
