--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -212,7 +212,7 @@
                 <div class="single-consulting-one">
                   <div class="right-area">
                     <h4>Night Golf</h4>
-                    <p>Friday, August 22nd</p>
+                    <p>Friday, August 22nd, 8:30pm SG</p>
                     <a
                       href="https://manager.gallusgolf.com/Register/53233/night-golf"
                       class="pillock"
